<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <!-- Top App Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="30dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icLogo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_logo_biru"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BankAssets"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/icLogo"
            app:layout_constraintTop_toTopOf="@id/icLogo"
            app:layout_constraintBottom_toBottomOf="@id/icLogo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/bottomNav">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Profile -->
            <TextView
                android:id="@+id/icProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_circle"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="F"
                android:textSize="30sp"
                android:textColor="@color/text"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Fadhila123"
                android:textSize="20sp"
                android:textColor="@color/text"/>

            <TextView
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fassyalala@gmail.com"
                android:layout_gravity="center"
                android:textColor="@color/text"
                android:textSize="14sp"/>

            <!-- CARD PUTIH -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/bg_card">
                <!-- ITEM 1 -->
                <LinearLayout
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_profile"/>

                    <TextView
                        android:id="@+id/editProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="12dp"
                        android:layout_gravity="center"
                        android:text="@string/edit_profile"
                        android:textColor="@color/text"/>

                    <ImageView
                        android:id="@+id/arrowRight1"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/bg_card">
                <!-- ITEM 2 -->
                <LinearLayout
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_theme"/>

                    <Switch
                        android:id="@+id/themeMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:minHeight="48dp"
                        android:text="@string/theme_mode"
                        android:textColor="@color/text"
                        android:layout_gravity="center"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/bg_card">
                <!-- ITEM 3 -->
                <LinearLayout
                    android:id="@+id/container3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_notifikasi"/>

                    <Switch
                        android:id="@+id/Notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:minHeight="48dp"
                        android:text="@string/notification"
                        android:textColor="@color/text"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAccesibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/bg_card">
                <!-- ITEM 4 -->
                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_aksesibilitas"/>

                    <Switch
                        android:id="@+id/Accessibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:minHeight="48dp"
                        android:text="@string/accessibility"
                        android:textColor="@color/text"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/bg_card">
                <!-- ITEM 5 -->
                <LinearLayout
                    android:id="@+id/container5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_about_us"/>

                    <TextView
                        android:id="@+id/aboutUs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/about_us"
                        android:textColor="@color/text"/>

                    <ImageView
                        android:id="@+id/arrowRight2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/bg_card">
                <!-- ITEM 6 -->
                <LinearLayout
                    android:id="@+id/container6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_log_out"/>

                    <TextView
                        android:id="@+id/logOut"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:text="@string/log_out"
                        android:textStyle="bold"
                        android:textColor="@color/text"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/bottomNav"
        layout="@layout/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
